[package]
name = "gaudium"
edition = "2018"
version = "0.0.0"
authors = ["Sean Olson <olson.sean.k@gmail.com>"]
license = "MIT"
description = "Cross-platform display and input abstraction."

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-pc-windows-msvc"

[features]
default = ["platform-facade"]
# Enables a facade platform. Gaudium will not build on unsupported platforms
# unless this is enabled.
platform-facade = []

[dependencies]
arrayvec = "^0.4.10"
fool = "0.0.1"
lazy_static = "^1.2.0"
num = "^0.2.0"

[target.'cfg(target_os = "linux")'.dependencies]
nix = "^0.13.0"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "^0.3.6"
features = [
    "commctrl",
    "hidpi",
    "hidusage",
    "libloaderapi",
    "processthreadsapi",
    "std",
    "winuser"]
